--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start:dev": "clear ; npx nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts"
 	},
 	"keywords": [],
 	"author": "",
