docker prisma and schema

--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:password@localhost:5432/social?schema=public"
+# DATABASE_URL="postgresql://postgres:password@localhost:5432/social?schema=public"
+DATABASE_URL="postgres://postgres:aioshima@localhost:5432/example?schema=public"
+#PGADMIN
+PG_USER                 = admin@email.com
+PG_PASS                 = admin123123
