--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
 		"dataloader": "^2.1.0",
 		"graphql": "^15.6.1",
 		"jsonwebtoken": "^8.5.1",
+		"ts-node": "^10.9.1",
 		"validator": "^13.7.0"
 	},
 	"devDependencies": {
 		"prisma": "^3.3.0",
-		"@types/node": "^20.3.2",
 		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.1.5"
+		"typescript": "^4.4.4"
 	}
 }
