--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 	"name": "grapql-practice",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start:dev": "clear ; npx nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts"
+		"start:dev": "clear ; npx nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
+		"dev": "ts-node-dev src/index.ts"
 	},
 	"keywords": [],
 	"author": "",
