--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
 	"name": "grapql-practice",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.ts",
+	"main": "index.js",
 	"scripts": {
+		"start": "node dist/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start:dev": "clear ; npx nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
-		"dev": "ts-node-dev src/index.ts"
+		"dev": "ts-node-dev src/index.ts",
+		"build": "rimraf ./dist && tsc"
 	},
 	"keywords": [],
 	"author": "",
